--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition">
             <i class="fas fa-face-smile text-[#8B7D6B] text-4xl mb-4"></i>
             <h3 class="font-bold text-xl mb-4">Dermatologia Estética</h3>
-            <p class="text-[#4A4A4A]">Tratamentos avançados para rejuvenescimento, incluindo Botox, preenchimentos e terapias a laser.</p>
+            <p class="text-[#4A4A4A]">Tratamentos avançados para rejuvenescimento, incluindo Botox e preenchimentos.</p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition">
             <i class="fas fa-medkit text-[#8B7D6B] text-4xl mb-4"></i>
@@ -150,7 +150,7 @@
             <div class="space-y-4">
               <div class="flex items-center">
                 <i class="fas fa-phone text-[#8B7D6B] mr-4"></i>
-                <span>(11) 98765-4321</span>
+                <span>(64) 3471-1412</span>
               </div>
               <div class="flex items-center">
                 <i class="fas fa-envelope text-[#8B7D6B] mr-4"></i>
@@ -158,7 +158,7 @@
               </div>
               <div class="flex items-center">
                 <i class="fas fa-map-marker-alt text-[#8B7D6B] mr-4"></i>
-                <span>Av. Brigadeiro Faria Lima, 1234<br>São Paulo - SP, 01452-002</span>
+                <span>Av. Comercial, 1368<br> Pontalina - GO, 75620-000</span>
               </div>
             </div>
           </div>
@@ -196,6 +196,7 @@
           <a href="https://www.linkedin.com/in/j%C3%BAlia-benedetti-00a90a15a/" class="text-white hover:text-[#F5F0E6]"><i class="fab fa-linkedin-in"></i></a>
         </div>
         <p class="text-gray-400">&copy; 2025 Dra. Júlia Benedetti Dermatologia. Todos os direitos reservados.</p>
+        <p class="text-gray-400">Desenvolvido por <a class="text-gray-400" href="https://github.com/lmos0">lmos0</a></p>
         
       </div>
     </footer>
