Revert "Add form attributes for enhanced submission handling in index.html"
This reverts commit 4ccf2dc07044da5e1f2dae1bfff3c74f1418b9e0.

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div>
-            <form class="bg-[#F5F0E6] p-8 rounded-lg shadow-md" target="_self" enctype="multipart/form-data" action="https://formkeep.com/f/b1c5fa60b247" accept-charset="UTF-8" method="post">
+            <form class="bg-[#F5F0E6] p-8 rounded-lg shadow-md">
               <h3 class="text-2xl font-bold mb-6 text-center">Solicitar Agendamento</h3>
               <div class="mb-4">
                 <input type="text" placeholder="Nome Completo" class="w-full p-3 border rounded-md">
