Update contact email address in index.html

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               </div>
               <div class="flex items-center">
                 <i class="fas fa-envelope text-[#8B7D6B] mr-4"></i>
-                <span>contato@drajuliabenedetti.com.br</span>
+                <span>atendimento@drajuliabenedetti.com.br</span>
               </div>
               <div class="flex items-center">
                 <i class="fas fa-map-marker-alt text-[#8B7D6B] mr-4"></i>
